feat: 完善和dify的通信

--- a/config/default/config.default.ini
+++ b/config/default/config.default.ini
@@ -11,8 +11,9 @@ api_key = your_api_key_here
 dify_url = http://localhost/v1/chat-messages
 
 ; 响应模式
-; 设置 Dify 的响应模式，可选值：streaming、non-streaming
-response_mode = streaming
+; 设置 Dify 的响应模式，可选值：blocking、streaming
+; 默认值为 blocking，即非流式响应模式
+response_mode = blocking
 
 ; 用户 ID
 ; 设置用户标识符，用于区分不同的用户
