feat: 更新.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-/run/log/2024-09-20_21-15-51.log
-/run/log/2024-09-20_21-15-54.log
-/run/log/2024-09-20_21-17-48.log
-/run/log/2024-09-20_21-21-37.log
-/run/log/2024-09-20_21-24-39.log
-/run/log/2024-09-20_21-28-14.log
-/.idea/vcs.xml
-/.idea/workspace.xml
+/run/log/
+/.idea/
