feat: 实现个人会话保持

--- a/config/default/config.default.ini
+++ b/config/default/config.default.ini
@@ -16,7 +16,10 @@ dify_url = http://localhost/v1/chat-messages
 response_mode = blocking
 
 ; 用户 ID
-; 设置用户标识符，用于区分不同的用户
-user_id = abc-123
+; 设置你的独特用户标识符，用于区分不同的用户
+user_id = test
 
-; 其他配置项可以在此添加
+; 对话模式，取值为: single, multi
+; single 表示单会话模式，会通过 DataManager 管理会话 ID
+; multi 表示多会话模式，每次请求都创建新的会话
+conversation_mode = single
