--- a/config/default/default_config.ini
+++ b/config/default/default_config.ini
@@ -23,3 +23,6 @@ user_id = test
 ; single 表示单会话模式，会通过 DataManager 管理会话 ID
 ; multi 表示多会话模式，每次请求都创建新的会话
 conversation_mode = single
+
+
+enabled_plugins =  # 启用的插件列表
