refactor: 完全重构所有代码结构
1.与log相关的尚未调整，有重复等的情况
2.data部分未完成

--- a/config/default/default_config.json
+++ b/config/default/default_config.json
@@ -1,11 +1,12 @@
 {
-  "api_key": "your_api_key_here",
+  "api_key": "",
   "dify_url": "http://localhost/v1/chat-messages",
+  "websocket_url": "ws://127.0.0.1:8070",
   "response_mode": "blocking",
   "user_id": "test",
   "bot_name": "小藏",
   "conversation_mode": "single",
-  "enabled_plugins": ["RealPersonGroupChat"],
+  "enabled_plugins": [""],
   "chat_setting": {
     "default": {
       "enabled": true,
@@ -28,9 +29,5 @@
     "cache_flush_interval": 600,
     "cache_threshold_percentage": 50
   },
-  "db_idle_timeout": 300,
-  "onebot_config": {
-    "transport_type": "websocket",
-    "websocket_url": "ws://127.0.0.1:8070"
-  }
+  "db_idle_timeout": 300
 }
